--- a/Field Book/AndroidManifest.xml
+++ b/Field Book/AndroidManifest.xml
@@ -31,7 +31,7 @@
         android:largeHeap="true" >
         <activity
             android:name="MainActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize|locale"
+            android:configChanges="keyboardHidden|orientation|screenSize|locale|keyboard"
             android:label="@string/app_name"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
