--- a/Field Book/AndroidManifest.xml
+++ b/Field Book/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.fieldbook.tracker"
-    android:versionCode="234"
-    android:versionName="2.3.4" >
+    android:versionCode="235"
+    android:versionName="2.3.5">
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -22,14 +22,13 @@
         android:largeScreens="true"
         android:normalScreens="false"
         android:smallScreens="false"
-        android:xlargeScreens="true" >
-    </supports-screens>
+        android:xlargeScreens="true"></supports-screens>
 
     <application
         android:hardwareAccelerated="true"
         android:icon="@drawable/icon"
         android:label="@string/app_name"
-        android:largeHeap="true" >
+        android:largeHeap="true">
         <activity
             android:name="MainActivity"
             android:configChanges="keyboardHidden|orientation|screenSize|locale|keyboard"
@@ -37,7 +36,7 @@
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.Custom"
-            android:windowSoftInputMode="stateAlwaysHidden" >
+            android:windowSoftInputMode="stateAlwaysHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -45,6 +44,12 @@
         </activity>
         <activity
             android:name=".Search.SearchActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize|locale"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.Dialog" />
+        <activity
+            android:name="DatagridActivity"
             android:configChanges="orientation|keyboardHidden|screenSize|locale"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
@@ -89,9 +94,9 @@
             android:theme="@style/Theme.Dialog" />
         <activity
             android:name="ChangelogActivity"
-            android:theme="@style/Theme.Dialog"
+            android:configChanges="orientation|keyboardHidden|screenSize|locale"
             android:screenOrientation="portrait"
-            android:configChanges="orientation|keyboardHidden|screenSize|locale"/>
+            android:theme="@style/Theme.Dialog" />
     </application>
 
 </manifest>
