--- a/Field Book/AndroidManifest.xml
+++ b/Field Book/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.fieldbook.tracker"
-    android:versionCode="235"
-    android:versionName="2.3.6">
+    android:versionCode="240"
+    android:versionName="2.4.0">
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -22,7 +22,7 @@
         android:smallScreens="false"
         android:normalScreens="false"
         android:largeScreens="true"
-        android:xlargeScreens="true"></supports-screens>
+        android:xlargeScreens="true"/>
 
     <application
         android:hardwareAccelerated="true"
