Finalized changes for smaller screens Drag and drop traits to reorder Reorganized trait row Changed trait copying protocol

--- a/Field Book/app/src/main/AndroidManifest.xml
+++ b/Field Book/app/src/main/AndroidManifest.xml
@@ -15,8 +15,8 @@
 
     <supports-screens
         android:anyDensity="true"
-        android:smallScreens="false"
-        android:normalScreens="false"
+        android:smallScreens="true"
+        android:normalScreens="true"
         android:largeScreens="true"
         android:xlargeScreens="true"/>
 
