--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
                 variant.outputs.each { output ->
                     def newName = output.outputFile.name
                     newName = newName.replace("app-release", "Field-Book")
-                    output.outputFile = new File(output.outputFile.parent, newName)
+                    output.outputFileName = new File(output.outputFile.parent, newName)
                 }
             }
         }
