--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,12 +31,12 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:26.1.0'
-    compile 'com.android.support:design:26.1.0'
-    compile 'com.android.support:appcompat-v7:26.1.0'
-    compile 'org.jsoup:jsoup:1.8.1'
-    compile 'net.sourceforge.jexcelapi:jxl:2.6.10'
-    compile 'com.github.apl-devs:appintro:v4.2.0'
-    compile project(':dropbox')
-    implementation 'com.android.support:exifinterface:28.0.0-alpha3'
+    implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'org.jsoup:jsoup:1.8.1'
+    implementation 'net.sourceforge.jexcelapi:jxl:2.6.10'
+    implementation 'com.github.apl-devs:appintro:v4.2.0'
+    implementation project(':dropbox')
+    implementation 'com.android.support:exifinterface:26.1.0'
 }
