--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     implementation 'com.github.apl-devs:appintro:v4.2.0'
     implementation project(':dropbox')
     implementation 'com.android.support:exifinterface:26.1.0'
+    compile 'com.android.volley:volley:1.1.1'
 }
