--- a/dropbox/build.gradle
+++ b/dropbox/build.gradle
@@ -19,5 +19,5 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:support-v4:22.2.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 }
