--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     implementation 'net.sourceforge.jexcelapi:jxl:2.6.10'
     implementation 'androidx.exifinterface:exifinterface:1.0.0'
     implementation project(':dropbox')
+    implementation 'com.android.volley:volley:1.1.1'
 }
