--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,15 @@ android {
     }
 }
 
+ext {
+    okhttp_version = "2.7.5"
+    gson_version = "2.8.5"
+    threetenbp_version = "1.4.0"
+    gsonfire_version = "1.8.3"
+    javax_annotation_version = "1.3.2"
+    swagger_annotations_version = "2.0.8"
+}
+
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha05'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -42,5 +51,5 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta1'
     implementation "androidx.preference:preference:1.0.0"
     implementation project(':dropbox')
-    implementation 'com.android.volley:volley:1.1.1'
+    implementation 'org.phenoapps:javalib:1.0.0'
 }
