--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,6 @@ dependencies {
     implementation "androidx.preference:preference:1.0.0"
     implementation project(':dropbox')
     implementation 'com.android.volley:volley:1.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'pub.devrel:easypermissions:3.0.0'
 }
