--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,17 +31,22 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha05'
+    implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha05'
-    implementation 'com.google.android.material:material:1.1.0-alpha06'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta03'
+    implementation 'com.google.android.material:material:1.1.0-alpha09'
     implementation 'org.jsoup:jsoup:1.8.1'
     implementation 'net.sourceforge.jexcelapi:jxl:2.6.10'
     implementation 'androidx.exifinterface:exifinterface:1.0.0'
     implementation "androidx.legacy:legacy-preference-v14:1.0.0"
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
     implementation "androidx.preference:preference:1.0.0"
-    implementation project(':dropbox')
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'pub.devrel:easypermissions:3.0.0'
+    implementation('com.journeyapps:zxing-android-embedded:3.6.0') { transitive = false }
+    implementation 'com.google.zxing:core:3.3.0'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+
+
+    implementation project(':dropbox')
 }
