--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,12 @@ android {
         checkReleaseBuilds false
         disable 'MissingTranslation'
     }
+
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
 }
 
 dependencies {
@@ -46,4 +52,6 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'pub.devrel:easypermissions:3.0.0'
     implementation 'com.android.volley:volley:1.1.1'
+    testImplementation 'androidx.test:core:1.0.0'
+    testImplementation 'org.robolectric:robolectric:4.3'
 }
