--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,22 +31,24 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta03'
-    implementation 'com.google.android.material:material:1.1.0-alpha09'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta05'
+    implementation 'com.google.android.material:material:1.1.0-beta01'
     implementation 'org.jsoup:jsoup:1.8.1'
     implementation 'net.sourceforge.jexcelapi:jxl:2.6.10'
     implementation 'androidx.exifinterface:exifinterface:1.0.0'
     implementation "androidx.legacy:legacy-preference-v14:1.0.0"
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
-    implementation "androidx.preference:preference:1.0.0"
+    implementation "androidx.preference:preference:1.1.0"
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'pub.devrel:easypermissions:3.0.0'
     implementation('com.journeyapps:zxing-android-embedded:3.6.0') { transitive = false }
     implementation 'com.google.zxing:core:3.3.0'
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-
+    implementation 'com.android.support:appcompat-v7:28'
+    implementation group: 'org.threeten', name: 'threetenbp', version: '0.7.2'
 
     implementation project(':dropbox')
+
+    testImplementation 'androidx.test:core:1.0.0'
 }
