--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
+
     compileSdkVersion 28
     buildToolsVersion '28.0.3'
 
@@ -52,5 +53,6 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'pub.devrel:easypermissions:3.0.0'
     implementation 'com.android.volley:volley:1.1.1'
+    testImplementation 'org.robolectric:robolectric:4.3.1'
     testImplementation 'androidx.test:core:1.0.0'
 }
