--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
+
     compileSdkVersion 28
     buildToolsVersion '28.0.3'
 
@@ -28,6 +29,12 @@ android {
         checkReleaseBuilds false
         disable 'MissingTranslation'
     }
+
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
 }
 
 dependencies {
@@ -39,16 +46,20 @@ dependencies {
     implementation 'net.sourceforge.jexcelapi:jxl:2.6.10'
     implementation 'androidx.exifinterface:exifinterface:1.0.0'
     implementation "androidx.legacy:legacy-preference-v14:1.0.0"
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta1'
     implementation "androidx.preference:preference:1.1.0"
-    implementation 'com.android.volley:volley:1.1.1'
+    implementation 'org.phenoapps:javalib:1.0.4'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'pub.devrel:easypermissions:3.0.0'
+    implementation 'com.android.volley:volley:1.1.1'
     implementation('com.journeyapps:zxing-android-embedded:3.6.0') { transitive = false }
     implementation 'com.google.zxing:core:3.3.0'
     implementation 'com.android.support:appcompat-v7:28'
-    implementation group: 'org.threeten', name: 'threetenbp', version: '0.7.2'
 
     implementation project(':dropbox')
 
     testImplementation 'androidx.test:core:1.0.0'
+    testImplementation 'org.robolectric:robolectric:4.3.1'
+    testImplementation 'androidx.test:core:1.0.0'
+    testImplementation 'junit:junit:4.12'
 }
