--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,8 @@ android {
         applicationId "com.fieldbook.tracker"
         minSdkVersion 16
         targetSdkVersion 28
+        versionCode = 410
+        versionName = '4.1.0'
     }
 
     buildTypes {
@@ -56,6 +58,7 @@ dependencies {
     implementation('com.journeyapps:zxing-android-embedded:3.6.0') { transitive = false }
     implementation 'com.google.zxing:core:3.3.0'
     implementation 'com.android.support:appcompat-v7:28'
+    implementation 'com.h6ah4i.android.preference:numberpickerprefcompat:1.0.0'
 
     implementation project(':dropbox')
 
