--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-crashlytics:17.0.0-beta01'
     implementation 'com.microsoft.onedrivesdk:onedrive-picker-android:v2.0'
     implementation 'com.github.MFlisar:changelog:1.1.6'
+    implementation 'com.github.daniel-stoneuk:material-about-library:2.4.2'
+    implementation "com.mikepenz:aboutlibraries:6.2.3"
 
     implementation project(':dropbox')
 
