--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,7 @@ dependencies {
     implementation 'com.github.MFlisar:changelog:1.1.6'
     implementation 'com.github.daniel-stoneuk:material-about-library:2.4.2'
     implementation "com.mikepenz:aboutlibraries:6.2.3"
+    implementation 'com.getkeepsafe.taptargetview:taptargetview:1.13.0'
 
     implementation project(':dropbox')
 
