BrAPI: Filter fields by program and trial
- New options menu in BrAPI Select fields activity:
 - Filter by program
 - Filter by trial
- New Select Programs activity: select one programDbId and return it
- New Select Trial activity:
 - Trial list filtered by programDbId (if available).
 - Select one trialDbId and return it.
- BrAPIService:
 - getPrograms
 - getTrials
 - getStudies: filter by programDbId and trialDbId

Fix #134
IBP-3880

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,6 +70,18 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
         <activity
+            android:name=".activities.BrapiProgramActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize|locale"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".activities.BrapiTrialActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize|locale"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme" />
+        <activity
             android:name=".activities.BrapiTraitActivity"
             android:configChanges="orientation|keyboardHidden|screenSize|locale"
             android:launchMode="singleTop"
