Fix styling issue: Use AppThemeAction
#134
IBP-3880

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,7 +68,7 @@
             android:configChanges="orientation|keyboardHidden|screenSize|locale"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme" />
+            android:theme="@style/AppThemeAction" />
         <activity
             android:name=".activities.BrapiProgramActivity"
             android:configChanges="orientation|keyboardHidden|screenSize|locale"
