--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,8 @@ dependencies {
     implementation 'com.getkeepsafe.taptargetview:taptargetview:1.13.0'
     implementation 'com.github.ByteHamster:SearchPreference:v2.0.0'
     implementation "com.github.skydoves:colorpickerpreference:2.0.4"
+    implementation files('C:\\Users\\ps664\\Documents\\BrAPI\\brapi-java-client-2\\brapi\\brapi-java-model\\target\\brapi-java-model-2.0-SNAPSHOT.jar')
+    implementation files('C:\\Users\\ps664\\Documents\\BrAPI\\brapi-java-client-2\\brapi\\brapi-java-client\\target\\brapi-java-client-2.0-SNAPSHOT.jar')
 
     testImplementation 'androidx.test:core:1.3.0'
     testImplementation 'org.robolectric:robolectric:4.3.1'
