closes issue#172 added new brapi v2 import fragment BrapiLoadDialog change (small change to allow multiple studies to be imported) Updated BrapiActivity to work with BrapiLoadDialog change. added kotlin coroutine dependency updated FieldEditorActivity to call new import when V2 is selected in settings. Added generic page view controller implementation.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,6 +64,12 @@
             android:launchMode="singleTop"
             android:theme="@style/ActivityDialog" />
         <activity
+            android:name=".activities.BrapiImportActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize|locale"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppThemeAction" />
+        <activity
             android:name=".activities.BrapiActivity"
             android:configChanges="orientation|keyboardHidden|screenSize|locale"
             android:launchMode="singleTop"
