Modularized brapi import into programs, trials, and studies specific fragments. Added animation to fragment transition in import activity. Added search request handling that backs down to fast search dependent on brapi server implementation.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,7 +64,19 @@
             android:launchMode="singleTop"
             android:theme="@style/ActivityDialog" />
         <activity
-            android:name=".activities.BrapiImportActivity"
+            android:name=".fragments.BrapiProgramsFragment"
+            android:configChanges="orientation|keyboardHidden|screenSize|locale"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppThemeAction" />
+        <activity
+            android:name=".fragments.BrapiTrialsFragment"
+            android:configChanges="orientation|keyboardHidden|screenSize|locale"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppThemeAction" />
+        <activity
+            android:name=".fragments.BrapiStudiesFragment"
             android:configChanges="orientation|keyboardHidden|screenSize|locale"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
