--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,12 +50,18 @@ android {
             includeAndroidResources = true
         }
     }
+
+    packagingOptions {
+        exclude("META-INF/*.kotlin_module")
+    }
 }
 
 dependencies {
 
     //kotlin coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
+    //jetbrains
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1"
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -88,6 +94,14 @@ dependencies {
     implementation "com.github.skydoves:colorpickerpreference:2.0.4"
 
     implementation "org.brapi:brapi-java-client:2.0-SNAPSHOT"
+
+    // Ktor
+    implementation "io.ktor:ktor-client-android:1.3.2"
+    implementation "io.ktor:ktor-client-cio:1.3.2"
+    implementation "io.ktor:ktor-client-serialization-jvm:1.3.2"
+    implementation "io.ktor:ktor-client-gson:1.3.2"
+    implementation "io.ktor:ktor-client-auth-basic-jvm:1.3.2"
+    implementation "io.ktor:ktor-client-auth-jvm:1.3.2"
 
     testImplementation 'androidx.test:core:1.3.0'
     testImplementation 'org.robolectric:robolectric:4.3.1'
